// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ControlledFileInput component renders component when no files selected 1`] = `
<DocumentFragment>
  <div>
    <legend
      class="govuk-fieldset__legend govuk-fieldset__legend--s"
      id="fileUploadLegend"
    />
    <span
      class="govuk-hint lbh-hint"
      id="photos-hint"
    />
    <input
      accept=".jpg, .jpeg, .png"
      aria-labelledby="fileUploadLegend"
      class="govuk-file-upload custom-file-input"
      id="fileUpload"
      multiple=""
      name="fileUpload"
      style="margin-top: 10px;"
      type="file"
    />
  </div>
</DocumentFragment>
`;

exports[`ControlledFileInput component renders shows file previews 1`] = `
<DocumentFragment>
  <div>
    <legend
      class="govuk-fieldset__legend govuk-fieldset__legend--s"
      id="fileUploadLegend"
    />
    <span
      class="govuk-hint lbh-hint"
      id="photos-hint"
    />
    <input
      accept=".jpg, .jpeg, .png"
      aria-labelledby="fileUploadLegend"
      class="govuk-file-upload custom-file-input"
      id="fileUpload"
      multiple=""
      name="fileUpload"
      style="margin-top: 10px;"
      type="file"
    />
    <div
      class="photoUploadPreview"
    >
      <div
        class="photoUploadPreview-container"
      >
        <div
          class="photoUploadPreview-imageContainer"
        >
          <img
            alt="Preview Uploaded Image"
            class="photoUploadPreview-image"
            id="file-preview"
            src="mockResponseUrl"
          />
        </div>
        <p
          class="photoUploadPreview-filename"
        >
          test.png
        </p>
        <button
          class="photoUploadPreview-removeButton"
          type="button"
        >
          Remove
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ControlledFileInput component renders shows validation error 1`] = `
<DocumentFragment>
  <div>
    <legend
      class="govuk-fieldset__legend govuk-fieldset__legend--s"
      id="fileUploadLegend"
    />
    <span
      class="govuk-hint lbh-hint"
      id="photos-hint"
    />
    <span
      class="govuk-error-message lbh-error-message"
      data-error-id=""
      data-testid="error-message"
    >
      <span
        class="govuk-visually-hidden"
      >
        Error:
      </span>
       Some validation error
    </span>
    <input
      accept=".jpg, .jpeg, .png"
      aria-labelledby="fileUploadLegend"
      class="govuk-file-upload custom-file-input govuk-form-group--error"
      id="fileUpload"
      multiple=""
      name="fileUpload"
      style="margin-top: 10px;"
      type="file"
    />
    <div
      class="photoUploadPreview"
    >
      <div
        class="photoUploadPreview-container"
      >
        <div
          class="photoUploadPreview-imageContainer"
        >
          <img
            alt="Preview Uploaded Image"
            class="photoUploadPreview-image"
            id="file-preview"
            src="mockResponseUrl"
          />
        </div>
        <p
          class="photoUploadPreview-filename"
        >
          test.png
        </p>
        <button
          class="photoUploadPreview-removeButton"
          type="button"
        >
          Remove
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
